# Pointnet2.PyTorch

pointnet2/src/: CMakeLists.txt  sampling_gpu_ts.h  sampling_ts.cpp
